starting to look somewhat normal at least

--- a/index.html
+++ b/index.html
@@ -1,16 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>My Projects</h1>
-    <a href="Facial-Recognition-in-JS/index.html">Facial Recognition in JS</a>
-    <a href="QrScan/index.html">Qr Scanner using Shape API in Android</a>
-    <a href="UniversalQRScanner/index.html">Qr Scanner in the browser</a>
-    <a href="https://github.com/MasterSun8">My Personal Profile</a>
+    <h2><a style="all: unset;" href="index.html">D2 LFG Bingo</a></h2>
+    <a href="?neutral=true">Neutral</a>
+    <div class="raids">
+        <a href="?raid=lw">
+            <img src="images/lw.jpg" />
+            <div class="desc">Last Wish</div>
+        </a>
+        <a href="?raid=gos">
+            <img src="images/gos.jpg" />
+            <div class="desc">Garden of Salvation</div>
+        </a>
+        <a href="?raid=dsc">
+            <img src="images/dsc.jpg" />
+            <div class="desc">Deepstone Crypt</div>
+        </a>
+        <a href="?raid=vog">
+            <img src="images/vog.jpg" />
+            <div class="desc">Vault of Glass</div>
+        </a>
+        <a href="?raid=vow">
+            <img src="images/vow.jpg" />
+            <div class="desc">Vow of the Disciple</div>
+        </a>
+        <a href="?raid=kf">
+            <img src="images/kf.jpg" />
+            <div class="desc">King's Fall</div>
+        </a>
+        <a href="?raid=ron">
+            <img src="images/ron.jpg" />
+            <div class="desc">Root of Nightmares</div>
+        </a>
+        <a href="?raid=crota">
+            <img src="images/crota.jpg" />
+            <div class="desc">Crota's End</div>
+        </a>
+    </div>
+    <script src="index.js"></script>
 </body>
+
 </html>
