done, now just add more bingo elements

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <h2><a style="all: unset;" href="index.html">D2 LFG Bingo</a></h2>
-    <a href="?neutral=true">Neutral</a>
-    <div class="raids">
+    <h2><a id="title" style="all: unset;" href="index.html">D2 LFG Bingo</a></h2>
+    <a id="neutral" href="?neutral=true">Neutral</a>
+    <div id="raids" class="raids">
         <a href="?raid=lw">
             <img src="images/lw.jpg" />
             <div class="desc">Last Wish</div>
