looks fiucking great :D

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <div class="desc">Crota's End</div>
         </a>
     </div>
+    <div class="close-x"></div>
     <script src="index.js"></script>
 </body>
 
